# gmockExample

./: CMakeLists.txt  README.md
include/: IDatabase.hpp  Student.hpp
source/: Student.cpp
tests/: CMakeLists.txt  student_tests.cpp
